@@ -95,7 +95,6 @@ battlemouseshadow = on
 # pointer offset x = 0
 # pointer offset y = 0
 #
-# hardware buttons (max 6):
-# key_hw1 = 'a'
-# key_hw2 = 'h'
-# key_hw3 = 't'
+# virtual key mapping:
+# key_273 = '.'
+# key_275 = '/'
